<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Fragments.ContactFragment">

            <WebView
                android:id="@+id/webview_contact"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:translationZ="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#222222"
                android:orientation="vertical"
                android:paddingTop="18sp"
                app:layout_constraintTop_toBottomOf="@id/webview_contact">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="HEADQUARTER"
                    android:textColor="@color/golden"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/office1"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="Lahore Office"
                    android:textColor="@color/golden"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/office2"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="Contact Us"
                    android:textColor="@color/golden"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/contact1"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/contact2"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/contact3"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="top|center_horizontal"
                    android:text="@string/contact4"
                    android:textColor="@color/golden"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="30sp"
                    android:background="#222222"
                    android:scaleType="fitCenter"
                    android:src="@drawable/bottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/aboutview"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>